# gas_sensor

./: CMakeLists.txt  README.md  package.xml
arduino_project/gasSensor/: gasSensor.ino
dep/libserialpipe/: README.md  example.cpp  serialpipe.hpp
launch/: gas_sensor.launch
msg/: multi_gas_sensor_msg.msg
src/: gas_sensor_node.cpp
